Closed
Bug 1475642
Opened 7 years ago
Closed 7 years ago
Proper fix for bug 1469152 with some external audio card
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | wontfix |
| firefox62 | --- | fixed |
| firefox63 | --- | fixed |
People
(Reporter: jya, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
46 bytes,
text/x-phabricator-request
|
kinetik
:
review+
lizzard
:
approval-mozilla-beta+
|
Details | Review |
For reason unknown to me, the fix provided in bug 1469152 was verified as working with some external audio card such as the Audient P181 iD22 (10 inputs / 14 outputs)
It just couldn't have worked.
Let's provided the proper fix...
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jyavenard
| Assignee | ||
Comment 1•7 years ago
|
||
Additional fix to bug 1469152
| Assignee | ||
Comment 2•7 years ago
|
||
[Tracking Requested - why for this release]: fix that went in bug 1469152 was incorrect for the 2nd part.
status-firefox61:
--- → wontfix
status-firefox62:
--- → affected
status-firefox63:
--- → affected
tracking-firefox62:
--- → ?
Updated•7 years ago
|
Has Regression Range: --- → yes
Rank: 15
Keywords: regression
OS: Unspecified → Mac OS X
Priority: -- → P2
Hardware: Unspecified → x86
Comment 3•7 years ago
|
||
Comment on attachment 8992002 [details]
Bug 1475642 - Fix playback with some 3rd party audio cards. r?padenot, r?kinetik
Matthew Gregan [:kinetik] has approved the revision.
https://phabricator.services.mozilla.com/D2131
Attachment #8992002 -
Flags: review+
Updated•7 years ago
|
Attachment #8992002 -
Attachment description: Bug 1475642 - Fix playback on older macOS systems with some 3rd party audio cards. r?padenot, r?kinetik → Bug 1475642 - Fix playback with some 3rd party audio cards. r?padenot, r?kinetik
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/04dd259d71db
Fix playback with some 3rd party audio cards. r=kinetik
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
| Assignee | ||
Comment 6•7 years ago
|
||
Comment on attachment 8992002 [details]
Bug 1475642 - Fix playback with some 3rd party audio cards. r?padenot, r?kinetik
Approval Request Comment
[Feature/Bug causing the regression]: 1432779
[User impact if declined]: Invalid playback for some streams (mono) or people using non standard audio cards.
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: yes (ordered an audio card to test and was independently confirmed with users privately)
[Needs manual test from QE? If yes, steps to reproduce]: Need an external audio card as described in bug description
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: For the same reason bug 1469152, it can't be worse.
[String changes made/needed]: none[Feature/Bug causing the regression]: none
Attachment #8992002 -
Flags: approval-mozilla-beta?
Comment 7•7 years ago
|
||
Comment on attachment 8992002 [details]
Bug 1475642 - Fix playback with some 3rd party audio cards. r?padenot, r?kinetik
Looks like this has some independent verification from users that jya is in contact with. Let's try this fix again for beta 9.
Attachment #8992002 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
tracking-firefox62:
? → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•