Bug 1475642 - Fix playback with some 3rd party audio cards. r=kinetik

Additional fix to bug 1469152

Differential Revision: https://phabricator.services.mozilla.com/D2131